# SafeGen.dev

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILDPLAN.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .funcignore  Dockerfile  function_app.py  local.settings.example.json  pyproject.toml  requirements.txt
backend/core/: __init__.py  audit_logger.py  blob_storage.py  compliance_engine.py  models.py  openai_client.py  rag_pipeline.py  validators.py
backend/functions/: __init__.py  audit.py  ingest_rules.py  list_rules.py  metrics.py  validate.py
backend/tests/: __init__.py  conftest.py  test_audit.py  test_audit_logger.py  test_compliance_engine.py  test_ingest_rules.py  test_metrics.py  test_models.py  test_openai_client.py  test_rag_pipeline.py  test_validate.py  test_validators.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: use-api.ts  use-theme.ts
frontend/src/lib/: constants.ts  format.test.ts  format.ts  utils.ts
frontend/src/pages/: AuditPage.test.tsx  AuditPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  PlaygroundPage.test.tsx  PlaygroundPage.tsx  RulesPage.test.tsx  RulesPage.tsx
frontend/src/services/: api.test.ts  api.ts
frontend/src/test/: mocks.ts
frontend/src/types/: index.ts
rules/: bias_detection_policy.md  gdpr_content_rules.md  pii_handling_rules.md
(+21 files in other folders)
