[project]
name = "safegen"
version = "0.1.0"
description = "Serverless compliance-validation pipeline for LLM responses"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
src = [".", "core", "functions", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # use X | Y for union types (keep Optional for clarity)
    "UP045",  # use X | None (keep Optional for readability)
    "TC001",  # move stdlib import into TYPE_CHECKING (breaks runtime)
    "TC002",  # move third-party import into TYPE_CHECKING (breaks runtime)
    "TC003",  # move stdlib import into TYPE_CHECKING (breaks runtime)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "functions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
